--- a/src/app/admin/books/books.component.html
+++ b/src/app/admin/books/books.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class="books-container">
   <ul class="books-list" *ngIf="books">
-    <li class="book-item" fxLayout="row" *ngFor="let book of books;">
+    <li class="book-item" *ngFor="let book of books;">
       <div class="book-cover">
         <img *ngIf="book?.cover" src="{{book?.cover}}" alt="img" width="160">
       </div>
