--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
 /*@import url(https://fonts.googleapis.com/earlyaccess/alefhebrew.css);*/
 @import url(https://fonts.googleapis.com/icon?family=Material+Icons);
-/*@font-face {*/
-/*  font-family: "Rubik Regular";*/
-/*  src: url("/assets/fonts/Rubik-Regular.ttf");*/
-/*  !*src: url("CustomFont.woff") format("woff"),*!*/
-/*  !*url("CustomFont.otf") format("opentype"),*!*/
-/*  !*url("CustomFont.svg#filename") format("svg");*!*/
-/*}*/
+@font-face {
+  font-family: "Alef";
+  src: url("./assets/fonts/Alef-Bold.eot?#iefix") format('embedded-opentype'),
+       url('./assets/fonts/Alef-Bold.woff') format('woff'),
+       url('./assets/fonts/Alef-Bold.ttf') format('truetype'),
+       url('./assets/fonts/Alef-Bold.svg#alefbold') format('svg');
+  font-weight: bold;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Alef';
+  src: url('./assets/fonts/Alef-Regular.eot');
+  src: url('./assets/fonts/Alef-Regular.eot?#iefix') format('embedded-opentype'),
+  url('./assets/fonts/Alef-Regular.woff') format('woff'),
+  url('./assets/fonts/Alef-Regular.ttf') format('truetype'),
+  url('./assets/fonts/Alef-Regular.svg#alefregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
 /* potential palette {*/
 /*  --backgroundGreen: #078a05 */
 /*  --backgroundBlack: #000000 */
@@ -37,7 +49,7 @@ html {
 
 html, body {
   height: 100%;
-  font-family: 'David Libre', sans-serif !important;
+  font-family: 'Alef', sans-serif !important;
   font-weight: 500;
   font-size: 24px;
   scrollbar-width: 12px;
@@ -68,7 +80,7 @@ a {
 
 .mat-typography,
 .mat-typography>div{
-  font-family: 'David Libre', sans-serif;
+  font-family: 'Alef', sans-serif;
 }
 
 .mat-typography h4, .mat-typography h3,
@@ -76,7 +88,7 @@ a {
   font-weight: 600;
   font-size: 2em;
   line-height: 1.1em;
-  font-family: 'David Libre', serif;
+  font-family: 'Alef', serif;
   /*color: var(--colorRed);*/
 }
 
@@ -128,22 +140,21 @@ mat-date-range-picker.mat-datepicker-content {
   font-size: 26px;
   padding-right: 0;
   padding-left: revert;
-  font-family: 'David Libre', serif;
+  font-family: 'Alef', serif;
   font-weight: bolder;
   color: #41471F;
 }
 
 .mat-cell {
   font-size: 23px;
-  font-family: 'David Libre', serif;
-  padding: 6px;
+  font-family: 'Alef', serif;
   line-height: 1.2em;
 }
 
 .mat-header-cell:first-of-type, .mat-cell:first-of-type, .mat-footer-cell:first-of-type {
   padding-left: 0 !important;
-  padding-right: 12px !important;
-  font-family: "David Libre", serif;
+  padding: 18px 12px;
+  font-family: "Alef", serif;
 }
 
 .mat-tooltip {
