--- a/src/app/admin/articles/articles.component.html
+++ b/src/app/admin/articles/articles.component.html
@@ -1,42 +1,18 @@
-<div class="actions">
-  <button (click)="createArticle()" class="btn-add">
-    הוסף מאמר
-  </button>
+<div class="articles-container">
+  <h3>מאמרים וביקורות ספרים בכתבי עת</h3>
+  <div class="actions">
+    <button (click)="createArticle()" class="btn-add">
+      הוסף מאמר
+    </button>
+  </div>
+  <app-articles-list [articles]="articles"></app-articles-list>
 </div>
 <div class="articles-container">
-  <mat-table #table [dataSource]="articles" class="articles-table mat-elevation-z4" matSort>
-    <ng-container matColumnDef="title">
-      <mat-header-cell *matHeaderCellDef class="title">כותרת</mat-header-cell>
-      <mat-cell *matCellDef="let article" class="title">
-        <span *ngIf="article?.link === ''">{{article.title}}</span>
-        <a *ngIf="article?.link !== ''" target="_blank" href="{{article.link}}">{{article.title}}</a>
-      </mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="publication">
-      <mat-header-cell *matHeaderCellDef>עיתון/מגזין</mat-header-cell>
-      <mat-cell *matCellDef="let article">
-        <span>{{article.publication}}</span> </mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="date">
-      <mat-header-cell *matHeaderCellDef class="date">תאריך</mat-header-cell>
-      <mat-cell *matCellDef="let article" class="date">
-        <ng-container *ngIf="article.date">
-          <span>{{article.date}}</span>
-        </ng-container>
-      </mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="actions">
-      <mat-header-cell *matHeaderCellDef class="actions"></mat-header-cell>
-      <mat-cell *matCellDef="let article" class="actions">
-          <button class="btn" (click)="deleteDialog(article.id, article.title)" mat-icon-button>
-            <mat-icon>delete</mat-icon>
-          </button>
-          <button class="edit-btn" mat-icon-button (click)="openEditArticle(article)">
-            <mat-icon>edit</mat-icon>
-          </button>
-      </mat-cell>
-    </ng-container>
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
-  </mat-table>
+  <h3>מאמרים בעיתון ילדים</h3>
+  <div class="actions">
+    <button (click)="createChildArticle()" class="btn-add">
+      הוסף מאמר לילדים
+    </button>
+  </div>
+  <app-articles-for-children [childrenArticles]="childrenArticles"></app-articles-for-children>
 </div>
