--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -1,43 +1,14 @@
-<div class="articles-container" fxLayout="column">
-  <div class="search">
-    <mat-form-field class="input-search">
-      <input matInput placeholder="חפש" #searchInput (keyup)="applyFilter()">
-      <mat-icon matSuffix>search</mat-icon>
-    </mat-form-field>
-  </div>
-  <ng-container *ngIf="sortedData">
-    <mat-table #table [dataSource]="sortedData" [trackBy]="trackByUid" class="articles-table mat-elevation-z4" matSort
-               [class.isMobile]="isMobile">
-      <ng-container matColumnDef="title">
-        <mat-header-cell *matHeaderCellDef>כותרת</mat-header-cell>
-        <mat-cell *matCellDef="let article">
-          <span class="mobile-label">כותרת:</span>
-          <a *ngIf="article?.link" target="_blank" href="{{article.link}}">{{article.title}}</a>
-        </mat-cell>
+<div class="articles-container">
+  <mat-tab-group dynamicHeight>
+    <mat-tab label="מאמרים וביקורות ספרים בכתבי עת">
+    <ng-container *ngIf="sortedData">
+      <app-scholarly-articles [articles]="sortedData" [listLength]="listLength"></app-scholarly-articles>
+    </ng-container>
+    </mat-tab>
+    <mat-tab label="מאמרים בעיתון ילדים">
+      <ng-container *ngIf="childrenArticles && kidListLength !== 0">
+          <app-childrens-articles [articles]="childrenArticles" [kidListLength]="kidListLength"></app-childrens-articles>
       </ng-container>
-      <ng-container matColumnDef="publication">
-        <mat-header-cell *matHeaderCellDef class="paper">עיתון/מגזין</mat-header-cell>
-        <mat-cell *matCellDef="let article" class="paper">
-          <span class="mobile-label">עיתון:</span>
-          <span>{{article.publication}}</span> </mat-cell>
-      </ng-container>
-      <ng-container matColumnDef="date">
-        <mat-header-cell *matHeaderCellDef class="date">תאריך</mat-header-cell>
-        <mat-cell class="date" *matCellDef="let article">
-          <ng-container *ngIf="article.date">
-            <span class="mobile-label">תאריך:</span>
-            <span>{{article.date | date: 'yyyy'}}</span>
-          </ng-container>
-        </mat-cell>
-      </ng-container>
-      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
-    </mat-table>
-
-<!--    <mat-paginator [length]="200" [pageSizeOptions]="[10, 50, 100]" aria-label="Select page"></mat-paginator>-->
-    <div *ngIf="listLength === 0" class="no-results">
-      <h3>אין תוצאות</h3>
-    </div>
-  </ng-container>
-  <p></p>
+    </mat-tab>
+  </mat-tab-group>
 </div>
