--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -20,7 +20,7 @@
     </div>
   </li>
   <li class="nav-item">
-    <div routerLink="books-review" [ngClass]="{'nav-link': true, 'active' : isActive('books-review')}">בקורות
+    <div routerLink="books-review" [ngClass]="{'nav-link': true, 'active' : isActive('books-review')}">כתבו עליי
       <mat-icon class="active-chev">chevron_left</mat-icon>
     </div>
   </li>
