--- a/src/app/my-books/book-details/book-details.component.html
+++ b/src/app/my-books/book-details/book-details.component.html
@@ -8,5 +8,5 @@
       <p>{{book.link}}</p>
     </div>
   </div>
-  <p><a href="/books/list">חזור</a></p>
+  <p><a href="/my-books/list">חזור</a></p>
 </div>
