--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,12 @@
   <mat-toolbar class="header page-toolbar">
     <button mat-icon-button class="menu-mobile-btn" (click)="sidenav.toggle()"><mat-icon>menu</mat-icon></button>
     <div class="header-text">
-      <a routerLink="/">אליק מישורי</a> היסטוריון אמנות | אוצר | מרצה<span class="page-title">{{pageTitle}}</span>
+      <a routerLink="/">אליק מישורי</a>
+      <span class="vocations"> היסטוריון אמנות </span>
+      <span class="vocations"> אוצר </span>
+      <span class="vocations"> מרצה</span>
+      <span class="vocations"><mat-icon class="header-icon">arrow_back_ios</mat-icon></span>
+      <span class="page-title">{{pageTitle}}</span>
     </div>
   </mat-toolbar>
   <mat-sidenav-container class="sidenav-container">
