--- a/src/app/catalogs/catalog/catalog.component.css
+++ b/src/app/catalogs/catalog/catalog.component.css
@@ -1,4 +1,34 @@
 .catalog-container {
   font-size: 24px;
   padding: 1em;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1em
+}
+
+.title h3 {
+  font-size: 28px;
+  margin-bottom: 0;
+}
+
+.title {
+  width: 100%;
+}
+
+.catalog-image {
+  display: flex;
+  flex-direction: column;
+}
+
+.more-info {
+  max-width: 780px;
+  text-align: justify;
+}
+
+p {
+  width: 100%;
+}
+
+.back {
+  display: flex;
 }
